se crea controlador para usuarios / y configuracion jwt

--- a/prueba-sermaluc/src/main/resources/application.properties
+++ b/prueba-sermaluc/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 
+spring.datasource.url=jdbc:sqlite:C:/Users/gburgos/Documents/sermaluc-pruebas/PruebaDB
+
+
+hibernate.dialect = org.hibernate.dialect.SQLiteDialect
+
+jwt.secret=your-secret-key
+jwt.expiration=86400000
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+#logging.level.root=INFO
+#logging.level.org.springframework=DEBUG
+#logging.level.com.mi.paquete=TRACE
+
+
+#spring.jpa.hibernate.ddl-auto= create
